--- a/teleportd/.classpath
+++ b/teleportd/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="/Users/webtest/Documents/Android/workspace/jackson-mini-1.9.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
