--- a/teleportd/.classpath
+++ b/teleportd/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="lib/google-http-client-1.5.0-beta.jar"/>
 	<classpathentry kind="lib" path="lib/google-http-client-extensions-android2-1.5.0-beta.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-mini-1.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/guava-10.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/google-api-client-1.5.0-beta.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
