--- a/teleportd/AndroidManifest.xml
+++ b/teleportd/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:icon="@drawable/logo"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
         <activity
