--- a/teleportd/AndroidManifest.xml
+++ b/teleportd/AndroidManifest.xml
@@ -25,8 +25,9 @@
         </activity>
         
         <activity 
-              android:label="@string/app_name"
-            android:name=".TeleportdActivity" >
+            android:label="@string/app_name"
+            android:name=".TeleportdActivity"
+           >
             </activity>
     </application>
 
